删除介绍文档

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,3 +3,7 @@ masterY:
   title: 思维工坊创始人
   url: https://github.com/nemoob
   image_url: https://github.com/nemoob.png
+
+nemoob:
+  name: Mojo😯
+  title: 思维工坊合伙人
